--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
-    "mongoose": "^5.7.8"
+    "mongoose": "^5.7.8",
+    "gaussian": "*",
+    "fast-stats": "*"
   }
 }
