--- a/app/package.json
+++ b/app/package.json
@@ -19,9 +19,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8",
-    "mongoose": "^5.7.8",
+    "fast-stats": "*",
     "gaussian": "*",
-    "fast-stats": "*"
+    "graphql": "^14.5.8",
+    "mocha": "^6.2.2",
+    "mongoose": "^5.7.8"
   }
 }
