--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha sim/tests/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/markhakansson/m7011e-dynamic-web-systems#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "fast-stats": "*",
