Update to iso date in graphql. Add more mutations

--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "graphql": "^14.5.8",
     "mongoose": "^5.7.8",
     "gaussian": "*",
-    "fast-stats": "*"
+    "fast-stats": "*",
+    "graphql-iso-date": "*"
   }
 }
