--- a/app/package.json
+++ b/app/package.json
@@ -23,8 +23,11 @@
     "fast-stats": "*",
     "gaussian": "*",
     "graphql": "^14.5.8",
-    "mocha": "^6.2.2",
     "graphql-iso-date": "^3.6.1",
-    "mongoose": "^5.7.8"
+    "mocha": "^6.2.2",
+    "mongoose": "^5.7.8",
+    "morgan": "^1.9.1",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.3.0"
   }
 }
