--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/markhakansson/m7011e-dynamic-web-systems#readme",
   "dependencies": {
+    "apollo-server": "^2.9.12",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "ejs": "^3.0.1",
