--- a/app/package.json
+++ b/app/package.json
@@ -36,5 +36,13 @@
     "morgan": "^1.9.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
