--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         npm ci
         npm install
+        cd sim
         npm test
       working-directory: ./app
       env:
