--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha sim/tests/**/*.test.js"
+    "test": "mocha sim/tests/**/*.test.js",
+    "serve": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -28,13 +29,19 @@
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
     "install": "^0.13.0",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.2",
     "mongoose": "^5.7.12",
+    "morgan": "^1.9.1",
     "npm": "^6.13.1",
     "path": "^0.12.7",
-    "morgan": "^1.9.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
