--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/markhakansson/m7011e-dynamic-web-systems#readme",
   "dependencies": {
     "apollo-server": "^2.9.12",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "ejs": "^3.0.1",
@@ -28,13 +29,14 @@
     "gaussian": "*",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
+    "graphql-passport": "^0.5.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.2",
     "mongoose": "^5.7.12",
+    "morgan": "^1.9.1",
     "npm": "^6.13.1",
     "path": "^0.12.7",
-    "morgan": "^1.9.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
   }
