--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
     "mocha": "^6.2.2",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.1",
     "npm": "^6.13.1",
     "path": "^0.12.7",
     "winston": "^3.2.1",
