--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -5,7 +5,8 @@
         "es6": true,
         "node": true,
         "mongo": true,
-        "mocha": true
+        "mocha": true,
+        "jquery": true
     },
     "extends": [
         "standard"
