--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha sim/tests/**/*.test.js"
+    "test": "mocha sim/tests/**/*.test.js",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -36,7 +38,7 @@
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
-    "npm": "^6.13.1",
+    "npm": "^6.13.2",
     "path": "^0.12.7",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
