--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
     "npm": "^6.13.2",
+    "passport": "^0.4.1",
     "path": "^0.12.7",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
