--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.2.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
