Format files in simulator

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -46,6 +46,7 @@
         "comma-spacing": "warn",
         "object-curly-newline": "warn",
         "key-spacing": "warn",
-        "spaced-comment": "warn"
+        "spaced-comment": "warn",
+        "no-new": "warn"
     }
 }
