--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/markhakansson/m7011e-dynamic-web-systems#readme",
   "dependencies": {
     "apollo-server": "^2.9.12",
+    "app-root-path": "^3.0.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
@@ -42,6 +43,7 @@
     "morgan": "^1.9.1",
     "npm": "^6.13.2",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.3.0"
