Move test folder from /sim/tests to /test

--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "nyc mocha sim/tests/**/*.test.js",
+    "test": "nyc mocha --recursive",
     "start": "nodemon server.js"
   },
   "repository": {
