--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "gaussian": "*",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
+    "inspirational-quotes": "^1.0.8",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "mocha": "^6.2.2",
