--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "nyc mocha sim/tests/**/*.test.js",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "forever": "forever start server.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.0",
     "fast-stats": "*",
+    "forever-monitor": "^2.0.0",
     "gaussian": "*",
     "graphql": "^14.5.8",
     "graphql-iso-date": "^3.6.1",
