--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "nyc mocha sim/tests/**/*.test.js",
-    "start": "nodemon server.js",
+    "nodemon": "nodemon server.js",
     "forever": "forever start server.js"
   },
   "repository": {
